--- a/.github/workflows/deploy-lambdas.yml
+++ b/.github/workflows/deploy-lambdas.yml
@@ -1,7 +1,4 @@
-on:
-  push:
-    paths:
-      - "packages/lambdas/**"
+on: push
 name: Deploy Lambdas
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
