Add more binaryTargets to prisma schema

--- a/.github/workflows/deploy-lambdas.yml
+++ b/.github/workflows/deploy-lambdas.yml
@@ -1,4 +1,7 @@
-on: push
+on:
+  push:
+    paths:
+      - "packages/lambdas/**"
 name: Deploy Lambdas
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
