--- a/packages/lambda/package.json
+++ b/packages/lambda/package.json
@@ -2,12 +2,14 @@
   "name": "workspace",
   "version": "0.0.1",
   "scripts": {
-    "deploy": "./deploy.sh",
+    "test": "./scripts/test.sh",
+    "deploy": "./scripts/deploy.sh",
     "generate": "prisma generate",
     "migrate": "prisma migrate save --experimental && prisma migrate up --experimental"
   },
   "dependencies": {
     "@prisma/client": "^2.0.0-beta.4",
+    "aws-sdk": "^2.673.0",
     "uuid": "^8.0.0"
   },
   "devDependencies": {
