--- a/packages/lambda/package.json
+++ b/packages/lambda/package.json
@@ -8,11 +8,11 @@
     "migrate": "prisma migrate save --experimental && prisma migrate up --experimental"
   },
   "dependencies": {
+    "@prisma/cli": "^2.0.0-beta.4",
     "@prisma/client": "^2.0.0-beta.4",
-    "aws-sdk": "^2.673.0",
     "uuid": "^8.0.0"
   },
   "devDependencies": {
-    "@prisma/cli": "^2.0.0-beta.4"
+    "aws-sdk": "^2.673.0"
   }
 }
