--- a/packages/lambda/package.json
+++ b/packages/lambda/package.json
@@ -2,7 +2,7 @@
   "name": "lambda",
   "version": "0.0.1",
   "scripts": {
-    "test": "./scripts/test.sh",
+    "test": "node ./scripts/test.js",
     "deploy": "node scripts/deploy.js",
     "generate": "prisma generate",
     "migrate": "prisma migrate save --experimental && prisma migrate up --experimental"
@@ -13,6 +13,7 @@
     "uuid": "^8.0.0"
   },
   "devDependencies": {
-    "aws-sdk": "^2.673.0"
+    "aws-sdk": "^2.673.0",
+    "dotenv": "^8.2.0"
   }
 }
