--- a/packages/lambda/package.json
+++ b/packages/lambda/package.json
@@ -13,7 +13,11 @@
     "uuid": "^8.0.0"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.51",
+    "@types/node": "^14.0.1",
+    "@types/uuid": "^7.0.3",
     "aws-sdk": "^2.673.0",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "typescript": "^3.9.2"
   }
 }
