--- a/packages/lambda/package.json
+++ b/packages/lambda/package.json
@@ -2,8 +2,8 @@
   "name": "lambda",
   "version": "0.0.1",
   "scripts": {
-    "test": "node ./scripts/test.js",
-    "deploy": "node scripts/deploy.js",
+    "test": "ts-node scripts/test.ts",
+    "deploy": "ts-node scripts/deploy.ts",
     "generate": "prisma generate",
     "migrate": "prisma migrate save --experimental && prisma migrate up --experimental"
   },
@@ -18,6 +18,7 @@
     "@types/uuid": "^7.0.3",
     "aws-sdk": "^2.673.0",
     "dotenv": "^8.2.0",
+    "ts-node": "^8.10.1",
     "typescript": "^3.9.2"
   }
 }
