--- a/packages/lambda/package.json
+++ b/packages/lambda/package.json
@@ -2,7 +2,7 @@
   "name": "lambda",
   "version": "0.0.1",
   "scripts": {
-    "test": "ts-node scripts/test.ts",
+    "test": "jest src/__tests__/runJS.spec.ts --setupFiles dotenv/config",
     "deploy": "ts-node scripts/deploy.ts",
     "generate": "prisma generate",
     "migrate": "prisma migrate save --experimental && prisma migrate up --experimental"
@@ -14,10 +14,13 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.51",
+    "@types/jest": "^25.2.2",
     "@types/node": "^14.0.1",
     "@types/uuid": "^7.0.3",
     "aws-sdk": "^2.673.0",
     "dotenv": "^8.2.0",
+    "jest": "^26.0.1",
+    "ts-jest": "^26.0.0",
     "ts-node": "^8.10.1",
     "typescript": "^3.9.2"
   }
