--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -1,18 +1,18 @@
 on:
   push:
     paths:
-      - "packages/lambda/**"
-name: Deploy Lambda
+      - "packages/api/**"
+name: Deploy API
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
 jobs:
-  deploy-lambda:
+  deploy-api:
     defaults:
       run:
-        working-directory: packages/lambda
+        working-directory: packages/api
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
