--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -1,15 +1,12 @@
 {
   "name": "frontend",
   "version": "0.0.1",
-  "main": "index.js",
   "scripts": {
     "start": "sapper dev",
-    "build": "sapper export",
-    "deploy": "yarn build && wrangler publish"
+    "build": "sapper build",
+    "deploy": "node ./scripts/deploy.js"
   },
   "dependencies": {
-    "@cloudflare/kv-asset-handler": "^0.0.10",
-    "@cloudflare/wrangler": "^1.9.0",
     "compression": "^1.7.1",
     "polka": "next",
     "sirv": "^0.4.0",
@@ -24,6 +21,7 @@
     "rollup-plugin-svelte": "^5.0.1",
     "rollup-plugin-terser": "^5.3.0",
     "sapper": "^0.27.0",
+    "serverless-http": "^2.4.1",
     "svelte": "^3.0.0"
   }
 }
