--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "compression": "^1.7.1",
     "polka": "next",
-    "sirv": "^0.4.0",
-    "uuid": "^8.0.0"
+    "serverless-http": "^2.4.1",
+    "sirv": "^0.4.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "11.0.2",
@@ -22,7 +22,6 @@
     "rollup-plugin-svelte": "^5.0.1",
     "rollup-plugin-terser": "^5.3.0",
     "sapper": "^0.27.0",
-    "serverless-http": "^2.4.1",
     "svelte": "^3.0.0"
   }
 }
