--- a/.github/workflows/deploy-reaper.yml
+++ b/.github/workflows/deploy-reaper.yml
@@ -2,7 +2,7 @@ on:
   push:
     paths:
       - "packages/reaper/**"
-name: Deploy API
+name: Deploy Reaper
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
